fix navbar no longer covers content

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,8 @@
+.content-body{
+  top: 3.5em!important;
+}
 .logo {
-  width: 4em;
+  height: 3.5em;
   margin-left: .5em;
 }
 
